--- a/index.html
+++ b/index.html
@@ -627,7 +627,7 @@
 
               <li data-filter=".filter-card">Web Design</li>
 
-              <li data-filter=".filter-web">Interdisciplinary Computer Science II</li>
+              <li data-filter=".filter-web">Web App Development</li>
 
             </ul>
 
@@ -725,13 +725,13 @@
 
             <div class="portfolio-wrap">
 
-              <img src="assets/img/alist.png" class="img-fluid" alt="">
+              <img src="assets/img/heroku.png" class="img-fluid" alt="">
 
               <div class="portfolio-links">
 
-                <a href="assets/img/alist.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Array List Model"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/heroku.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pages App"><i class="bx bx-plus"></i></a>
 
-                <a href="AListModel.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://thawing-retreat-91228.herokuapp.com/" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
