Add Blog project

--- a/index.html
+++ b/index.html
@@ -681,17 +681,17 @@
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
 
             <div class="portfolio-wrap">
 
-              <img src="assets/img/HCSS.png" class="img-fluid" alt="">
+              <img src="assets/img/blog.jpg" class="img-fluid" alt="">
 
               <div class="portfolio-links">
 
-                <a href="assets/img/HCSS.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="HalloweenCSS"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/blog.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blog"><i class="bx bx-plus"></i></a>
 
-                <a href="HalloweenCSS.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/DaltonLee2k/Blog-App" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
