Add news to web dev class

--- a/index.html
+++ b/index.html
@@ -641,17 +641,17 @@
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
 
             <div class="portfolio-wrap">
 
-              <img src="assets/img/autocomplete.png" class="img-fluid" alt="">
+              <img src="assets/img/news.jpg" class="img-fluid" alt="">
 
               <div class="portfolio-links">
 
-                <a href="assets/img/autocomplete.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Autocomplete"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/news.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="News"><i class="bx bx-plus"></i></a>
 
-                <a href="Autocomplete.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/DaltonLee2k/News" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
