Add web final to portfolio

--- a/index.html
+++ b/index.html
@@ -645,13 +645,13 @@
 
             <div class="portfolio-wrap">
 
-              <img src="assets/img/news.jpg" class="img-fluid" alt="">
+              <img src="assets/img/website.png" class="img-fluid" alt="">
 
               <div class="portfolio-links">
 
-                <a href="assets/img/news.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="News"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/website.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="News"><i class="bx bx-plus"></i></a>
 
-                <a href="https://github.com/DaltonLee2k/News" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="https://github.com/MigLyons/WADGroupProject2.0" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
