Update Portfolio (post grad)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
 
 
-  <title>iPortfolio Bootstrap Template - Index</title>
+  <title>Dalton Lee Portfolio</title>
 
   <meta content="" name="description">
 
@@ -22,7 +22,7 @@
 
   <!-- Favicons -->
 
-  <link href="assets/img/favicon.png" rel="icon">
+  <link href="assets/img/pic1.JPG" rel="icon">
 
   <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
 
@@ -92,7 +92,7 @@
 
       <div class="profile">
 
-        <img src="assets/img/pic1.JPG" alt="" class="img-fluid rounded-circle">
+        <img src="assets/img/Dalton.png" alt="" class="img-fluid rounded-circle">
 
         <h1 class="text-light"><a href="index.html">Dalton Lee</a></h1>
 
@@ -158,7 +158,7 @@
 
           <h2>About</h2>
 
-          <p>I am currently a Software Engineering student at the University of Montana. </p>
+
 
         </div>
 
@@ -174,7 +174,7 @@
 
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
 
-            <h3>Software Engineer &amp; Web Developer.</h3>
+            <h3>Software Engineer</h3>
 
             <p class="fst-italic">
 
@@ -190,9 +190,9 @@
 
                   <li><i class="bi bi-chevron-right"></i> <strong>Birthday:</strong> <span>25 July 2000</span></li>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Website:</strong> <span>www.example.com</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Github:</strong> <span>https://github.com/DaltonLee2k</span></li>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>+123 456 7890</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Phone:</strong> <span>(406) 231-6627 </span></li>
 
                   <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Missoula, MT</span></li>
 
@@ -206,7 +206,7 @@
 
                   <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Bachelors in progress</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Computer Science</span></li>
 
                   <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dalton.lee@umconnect.umt.edu</span></li>
 
@@ -219,8 +219,7 @@
             </div>
 
             <p>
-              I have been a student at the University of Montana for three years. During that time I have gained experience with a number of coding languages. I have 
-              taken classes that have given me skills involving web design, data structures, and mathematics. I am hoping to find and entry level job in CS.
+              Recently graduated from the University of Montana with a Bachelors degree in Computer Science.
               
 
             </p>
@@ -237,100 +236,7 @@
 
 
 
-    <!-- ======= Facts Section ======= -->
-
-    <!--<section id="facts" class="facts">
-
-      <div class="container">
-
-
-
-        <div class="section-title">
-
-          <h2>Facts</h2>
-
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
-
-        </div>
-
-
-
-        <div class="row no-gutters">
-
-
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up">
-
-            <div class="count-box">
-
-              <i class="bi bi-emoji-smile"></i>
-
-              <span data-purecounter-start="0" data-purecounter-end="232" data-purecounter-duration="1" class="purecounter"></span>
-
-              <p><strong>Happy Clients</strong> consequuntur quae</p>
-
-            </div>
-
-          </div>
-
-
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="100">
-
-            <div class="count-box">
-
-              <i class="bi bi-journal-richtext"></i>
-
-              <span data-purecounter-start="0" data-purecounter-end="521" data-purecounter-duration="1" class="purecounter"></span>
-
-              <p><strong>Projects</strong> adipisci atque cum quia aut</p>
-
-            </div>
-
-          </div>
-
-
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="200">
-
-            <div class="count-box">
-
-              <i class="bi bi-headset"></i>
-
-              <span data-purecounter-start="0" data-purecounter-end="1453" data-purecounter-duration="1" class="purecounter"></span>
-
-              <p><strong>Hours Of Support</strong> aut commodi quaerat</p>
-
-            </div>
-
-          </div>
-
-
-
-          <div class="col-lg-3 col-md-6 d-md-flex align-items-md-stretch" data-aos="fade-up" data-aos-delay="300">
-
-            <div class="count-box">
-
-              <i class="bi bi-people"></i>
-
-              <span data-purecounter-start="0" data-purecounter-end="32" data-purecounter-duration="1" class="purecounter"></span>
-
-              <p><strong>Hard Workers</strong> rerum asperiores dolor</p>
-
-            </div>
-
-          </div>
-
-
-
-        </div>
-
-
-
-      </div>
-
-    </section> End Facts Section -->
-
+  
 
 
     <!-- ======= Skills Section ======= -->
@@ -500,9 +406,9 @@
 
                 <li>Missoula, MT</li>
 
-                <li>(123) 456-7891</li>
+                <li>(406) 231-6627</li>
 
-                <li>dalton.lee@umconnect.umt.edu</li>
+                <li>daltonlee0032@gmail.com</li>
 
               </ul>
 
@@ -516,11 +422,11 @@
 
               <h4>Bachelor In Computer Science &amp; Software Engineering</h4>
 
-              <h5>2019 - present (in progress)</h5>
+              <h5>2019 - 2023</h5>
 
               <p><em>University of Montana, Missoula, Mt</em></p>
 
-              <p>Currently in junior year pursuing undergrad at the University of Montana.</p>
+              <p>Recent college graduate</p>
 
             </div>
 
@@ -543,10 +449,11 @@
             <h3 class="resume-title">Professional Experience</h3>
 
             <div class="resume-item">
+              
 
               <h4>Bartender/Cook</h4>
 
-              <h5>2019 - Present</h5>
+              <h5>2019 - 2021</h5>
 
               <p><em>Western Bar, Augusta, MT </em></p>
 
@@ -564,6 +471,23 @@
 
             </div>
 
+            <div class="resume-item">
+
+              <h4>Cashier/Outfitter</h4>
+
+              <h5>2022 - present </h5>
+
+              <p><em>Cabelas, Missoula MT</em></p>
+
+              <ul>
+
+                <li>Work at registers</li>
+
+                <li>Work around the store wherever im needed (putting out freight, footwear, fishing, camping, etc...) </li>
+
+              </ul>
+
+            </div>
             <div class="resume-item">
 
               <h4>Pool Support Staff</h4>
@@ -625,9 +549,9 @@
 
               <li data-filter=".filter-app">Data Structures/Algorithms</li>
 
-              <li data-filter=".filter-card">Web Design</li>
+              <li data-filter=".filter-card">Web Development</li>
 
-              <li data-filter=".filter-web">Web App Development</li>
+              <li data-filter=".filter-web">Misc</li>
 
             </ul>
 
@@ -641,7 +565,7 @@
 
 
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
 
             <div class="portfolio-wrap">
 
@@ -651,7 +575,7 @@
 
                 <a href="assets/img/website.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="News"><i class="bx bx-plus"></i></a>
 
-                <a href="https://github.com/MigLyons/WADGroupProject2.0" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="webDev.html" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
@@ -685,13 +609,13 @@
 
             <div class="portfolio-wrap">
 
-              <img src="assets/img/blog.jpg" class="img-fluid" alt="">
+              <img src="assets/img/machlearn.jpg" class="img-fluid" alt="">
 
               <div class="portfolio-links">
 
-                <a href="assets/img/blog.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Blog"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/machlearn.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title=""><i class="bx bx-plus"></i></a>
 
-                <a href="https://github.com/DaltonLee2k/Blog-App" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="DeepLearningFinal.html" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
@@ -705,13 +629,13 @@
 
             <div class="portfolio-wrap">
 
-              <img src="assets/img/KidsCamp.png" class="img-fluid" alt="">
+              <img src="assets/img/dataVis.jpg" class="img-fluid" alt="">
 
               <div class="portfolio-links">
 
-                <a href="assets/img/KidsCamp.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Kids Camp"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/dataVis.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Kids Camp"><i class="bx bx-plus"></i></a>
 
-                <a href="KidsCamp.html" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="DataVis.html" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
@@ -725,13 +649,13 @@
 
             <div class="portfolio-wrap">
 
-              <img src="assets/img/heroku.png" class="img-fluid" alt="">
+              <img src="assets/img/android.jpg" class="img-fluid" alt="">
 
               <div class="portfolio-links">
 
-                <a href="assets/img/heroku.png" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pages App"><i class="bx bx-plus"></i></a>
+                <a href="assets/img/android.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox" title="Pages App"><i class="bx bx-plus"></i></a>
 
-                <a href="https://thawing-retreat-91228.herokuapp.com/" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="android.html" title="More Details"><i class="bx bx-link"></i></a>
 
               </div>
 
@@ -796,7 +720,7 @@
 
                 <h4>Email:</h4>
 
-                <p>dalton.lee@umconnect.umt.edu</p>
+                <p>daltonlee0032@gmail.com</p>
 
               </div>
 
@@ -808,7 +732,7 @@
 
                 <h4>Call:</h4>
 
-                <p>(123)-456-7890</p>
+                <p>(406) 231-6627</p>
 
               </div>
 
