--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
 
       <h1>Dalton Lee</h1>
 
-      <p>I'm <span class="typed" data-typed-items="Software Engineer"></span></p>
+      <p>I'm a <span class="typed" data-typed-items="Software Engineer"></span></p>
 
     </div>
 
@@ -204,11 +204,11 @@
 
                 <ul>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>21</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Age:</strong> <span>22</span></li>
 
                   <li><i class="bi bi-chevron-right"></i> <strong>Degree:</strong> <span>Computer Science</span></li>
 
-                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>dalton.lee@umconnect.umt.edu</span></li>
+                  <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>daltonlee0032@gmail.com</span></li>
 
                   <li><i class="bi bi-chevron-right"></i> <strong>Freelance:</strong> <span>Available</span></li>
 
